--- a/index.html
+++ b/index.html
@@ -28,12 +28,10 @@
 
        <img src="images/IMG_1596.jpg" class="auth-image" alt="placeholder">
 
-      <p>Cynthia Zapata has worked as an Administrative Specialist at UCLA anderson School of Managment since January 2017. She is currently enrolled in the UCLA Extension Bootcamp 2017.</p>
-
-      <p></p>
-
+      <p>Cynthia Zapata is a full stack developer possessing knowledge of Javascript, HTML, CSS and various backend technologies. Cynthia received her Bachelor’s degree in Philosophy with Honors at the University of California Los Angeles and a Certificate in Full Stack Web Development at  UCLA Extension.She currently works as an administrative specialist at the UCLA Anderson School of Management.</p>
     </section>
 
+    
     <section class="sidebar">
       <div id="connect">
         <h2>Connect with Me</h2>
