--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
+      <a href="index.html" id="logo">Cynthia</a>
       <nav>
         <ul>
           <li><a href="index.html">About</a></li>
